--- a/about.html
+++ b/about.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head><title>About Armen</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>About Armen</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>About Armen</h1>
-<p>Armen is a curated gift guide designed to help you discover high-quality gifts for men. From tech to self-care, we handpick products we genuinely recommend.</p>
+    <header><h1>About Armen</h1></header>
+    <main>
+        <p>Armen is dedicated to helping you discover the best gifts for men. We curate tech gadgets, grooming kits, wallets, and other thoughtful items.</p>
+    </main>
+    <footer><p>&copy; 2025 Armen</p></footer>
 </body>
 </html>
