--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head><title>Armen Blog</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Armen Blog</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Gift Guides & Ideas</h1>
-<ul>
-  <li><a href="#">Top 10 Grooming Gifts Under $50</a></li>
-  <li><a href="#">Smart Gadgets He’ll Actually Use</a></li>
-  <li><a href="#">Father’s Day Gift Ideas for Every Budget</a></li>
-</ul>
+    <header><h1>Gifting Tips & Trends</h1></header>
+    <main>
+        <article>
+            <h2>Top 5 Tech Gifts for 2025</h2>
+            <p>Explore trending gadgets that make perfect gifts this year – from wireless chargers to smartwatches.</p>
+        </article>
+    </main>
+    <footer><p>&copy; 2025 Armen</p></footer>
 </body>
 </html>
